# globe-mesh-builder

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  supply-chain.yml
src/: geo.rs  icosahedron.rs  lib.rs  linalg.rs  main.rs
