[package]
name = "geojson-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vecmat = "0.7.8"
geojson = "0.24.0"
num-traits = "0.2.14"
earcutr = "0.3.0"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
log = "0.4.17"
clap = { version = "4.0.13", features = ["derive"] }
env_logger = "0.9.1"
total_float_wrap = "0.1.1"
