[package]
name = "geojson-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vecmat = "0.7.8"
earcutr = "0.4.2"
serde = { version = "1.0.145", features = ["derive"] }
log = "0.4.17"
clap = { version = "4.0.13", features = ["derive"] }
env_logger = "0.10.0"
total_float_wrap = "0.1.1"
shapefile = { version = "0.5.0", features = ["geo-types"] }
