[package]
name = "globe-mesh-builder"
description = "Parses SHP (shapefiles) and produce OpenGL compatible vertex and index buffers for drawing a spherical world map (globe)"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vecmat = "0.7.8"
earcutr = "0.4.2"
log = "0.4.17"
clap = { version = "4.0.13", features = ["derive"] }
env_logger = "0.10.0"
total_float_wrap = "0.1.1"
shapefile = { version = "0.5.0", features = ["geo-types"] }
